--- a/ntou1092iOS_hw2/Info.plist
+++ b/ntou1092iOS_hw2/Info.plist
@@ -30,7 +30,12 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchScreen</key>
-	<dict/>
+	<dict>
+		<key>UIColorName</key>
+		<string>Launch Color</string>
+		<key>UIImageName</key>
+		<string>hw2_launchImage</string>
+	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
